--- a/getToken/get_token.html
+++ b/getToken/get_token.html
@@ -103,7 +103,7 @@ document.getElementById('txt1').innerHTML = window.location.href.slice(window.lo
     </tr>
 </table>
 
-<h1><center>Авторизация для работы с API Яндекс Директ с помощью R клиента <b>ryandexdirect</b></center></h1>
+<h1><center>Авторизация для работы с API MyTarget с помощью R клиента <b>rmytarget</b></center></h1>
 <h2><center>Ваш Токен доступа:</center></h2>
 <div class="tok_style">
 <center>
@@ -111,9 +111,9 @@ document.getElementById('txt1').innerHTML = window.location.href.slice(window.lo
 </center>
 </div>
     
-<p><center><i>Введите значение данного токена в R консоль в качестве ответа на запрос "Enter your token: ", после чего в R будет создан объект содержащий токен доступа к API Яндекс Директ и вы сможете получить данные с помощью функций доступных в пакете ryandexdirect.</center></i></p>
+<p><center><i>Введите значение данного токена в R консоль в качестве ответа на запрос "Enter your token: ", после чего в R будет создан объект содержащий токен доступа к API MyTarget и вы сможете получить данные с помощью функций доступных в пакете ryandexdirect.</center></i></p>
 
-<p><center>Подробное описание всех доступных функций пакета можно найти <a href="https://selesnow.github.io/ryandexdirect/">тут</a>.</center></p>
+<p><center>Подробное описание всех доступных функций пакета можно найти <a href="https://selesnow.github.io/rmytarget/">тут</a>.</center></p>
 
 <h2 id="автор-пакетов-алексей-селезнёв-head-of-analytics-dept-at-netpeak"><em>Автор пакета: Алексей Селезнёв, Head of Analytics Dept. at Netpeak</em></h2>
 <table>
