--- a/getToken/get_token.html
+++ b/getToken/get_token.html
@@ -104,7 +104,7 @@ document.getElementById('txt1').innerHTML = window.location.href.slice(window.lo
 </table>
 
 <h1><center>Авторизация для работы с API MyTarget с помощью R клиента <b>rmytarget</b></center></h1>
-<p align="center"><a href="https://vk.com/data_club" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRl7FBZBdAiBNpFAnsL-V21qJwud48cca7ZPdWC5971vgaLTxn_" width="300"></a></p>
+<p align="center"><a href="https://vk.com/data_club" target="_blank"><img src="http://www.d-slim.ru/images/my_vk.png" width="300"></a></p>
 <h2><center>Ваш Токен доступа:</center></h2>
 <div class="tok_style">
 <center>
