--- a/getToken/get_token.html
+++ b/getToken/get_token.html
@@ -37,7 +37,23 @@
 
 <script>
 window.onload = function() {
-document.getElementById('txt1').innerHTML = window.location.href.slice(window.location.href.indexOf('=') + 1, window.location.href.indexOf('&'));
+var params = window
+    .location
+    .search
+    .replace('?','')
+    .split('&')
+    .reduce(
+        function(p,e){
+            var a = e.split('=');
+            p[ decodeURIComponent(a[0])] = decodeURIComponent(a[1]);
+            return p;
+        },
+        {}
+    );
+
+document.getElementById('txt1').innerHTML = params['code'];
+
+
 }
 </script>
   </head>
