--- a/getToken/get_token.html
+++ b/getToken/get_token.html
@@ -121,14 +121,14 @@ document.getElementById('txt1').innerHTML = params['code'];
 
 <h1><center>Авторизация для работы с API MyTarget с помощью R клиента <b>rmytarget</b></center></h1>
 <p align="center"><a href="https://vk.com/data_club" target="_blank"><img src="http://www.d-slim.ru/images/my_vk.png" width="300"></a></p>
-<h2><center>Ваш Токен доступа:</center></h2>
+<h2><center>Ваш Код подтверждения:</center></h2>
 <div class="tok_style">
 <center>
 <p><span id='txt1' class="tok_style"></span></p>
 </center>
 </div>
     
-<p><center><i>Введите значение данного токена в R консоль в качестве ответа на запрос "Enter your token: ", после чего в R будет создан объект содержащий токен доступа к API MyTarget и вы сможете получить данные с помощью функций доступных в пакете ryandexdirect.</center></i></p>
+<p><center><i>Введите значение данного токена в R консоль в качестве ответа на запрос "Enter code from browser: ", после чего в R будет создан объект содержащий токен доступа к API MyTarget и вы сможете получить данные с помощью функций доступных в пакете ryandexdirect.</center></i></p>
 
 <p><center>Подробное описание всех доступных функций пакета можно найти <a href="https://selesnow.github.io/rmytarget/">тут</a>.</center></p>
 
