--- a/getToken/get_token.html
+++ b/getToken/get_token.html
@@ -53,6 +53,9 @@ var params = window
 
 document.getElementById('txt1').innerHTML = params['code'];
 
+token = document.getElementById('txt1').innerHTML;
+navigator.clipboard.writeText(token);
+window.setTimeout("document.location.href='/rmytarget/';", 30000);
 
 }
 </script>
@@ -122,6 +125,8 @@ document.getElementById('txt1').innerHTML = params['code'];
 <h1><center>Авторизация для работы с API MyTarget с помощью R клиента <b>rmytarget</b></center></h1>
 <p align="center"><a href="https://vk.com/data_club" target="_blank"><img src="http://www.d-slim.ru/images/my_vk.png" width="300"></a></p>
 <h2><center>Ваш Код подтверждения:</center></h2>
+<p>Код подтверждения автоматически был скопирован в буфер обмена, вы можете вернуться в RStudio и ввести его в консоль.</p>
+<p>В течении 30 секунд вы будете перенаправлены на <a href='/rmytarget/'>страницу документации</a> пакета <b>rmytarget</b></p>
 <div class="tok_style">
 <center>
 <p><span id='txt1' class="tok_style"></span></p>
